pathways_vue/css/custom.scss
@use "sass:map";
@import 'axdd-components/src/assets/css/custom.scss';

// override variables
$nav-height: 52px;
$bar-height: 40px;
$link-color: #0069d9; //a11y blue

// pathways custom theme colors
$custom-colors: (
  "test": red, // bg-test text-test
  "link-color": $link-color,
  "blue-200":   $blue-200,
  "orange-200": $orange-200, // border-orange-200
  "teal-200":   $teal-200,
  "gray-800":   $gray-800, // bg-gray-800
  "light-beige": #FAF8F4,
  "light-gray": #F8F9FA,
);

// axdd-components + pathways custom colors
$theme-colors: map-merge($theme-colors, $custom-colors);
$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
$utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");

// import bootstrap and bootstrap-icons
@import "bootstrap/scss/bootstrap";
@import "bootstrap-icons/font/bootstrap-icons.css";

// additional non-bootstrap styles

.blah { color: purple; }

a {
  text-decoration: none;
}

// global pathways colors

.pw-orange { background-color: $orange-200; }
.pw-green { background-color: $teal-200; }
.pw-blue { background-color: $blue-200; }
.creamcicle { background-color: $orange-200; }
.yellow { background-color: $yellow-200; }

// custom fonts
.pw-font-open-sans {
  font-family: 'Open Sans', sans-serif !important;
}
.pw-font-encode-sans {
  font-family: 'Encode Sans', sans-serif !important;
}

// custom course btn
.btn-course {
  display: inline-block;
  padding: 0.35em 0.65em;
  font-size: 0.75em;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
}

